--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
      <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@700&family=Montserrat:wght@300;400;600&family=Work+Sans:ital,wght@0,400;0,500;1,600&display=swap" rel="stylesheet">
-    <title>U+X</title>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Caveat:wght@700&family=Dancing+Script:wght@600&family=Montserrat:wght@300;400;600&family=Work+Sans:ital,wght@0,400;0,500;1,600&display=swap" rel="stylesheet">
+<title>U+X</title>
 </head>
 <body>
     <div class="container">
@@ -44,10 +47,26 @@
             <div class="textHistory">
                 <div> <img src="/images/love.svg" alt=""></div>
                 <h1>История нашей любви...</h1>
-                <p>Мы встретились 5 лет назад в Горьковском парке. Была <br> осень и шёл сильный дождь. Но он не помешал нам <br>провести вместе этот волшебный вечер. Наша любовь <br> вспыхнула подобно красным листьям клёна, и вместо <br>поздней осени, в душе настала весна. И с тех пор,<br> в каплях дождя мы всегда слышим музыку.</p>
+                <p>Наша история началась еще с детства,<br> дружба которая переросла в любовь... <br>
+                Сквозь года я вижу как ты изменился <br>в лучшую сторону, я вижу в тебе защиту,<br> опору и любовь🤍🤍🤍</p>
             </div>
         </div>
         <div class="gallery">
+            <div class="ulan">
+                <hr>
+                <h1>Улан</h1>
+                <hr>
+                <img class="galleryImg" src="./images/ulik.JPG" alt="">
+                <p>Мы знакомы уже 11 лет, но по сей день<br> мы открываемся друг другу. Я готов прожить <br> с тобой всю жизнь. 
+                Буду мужем и другом, хочу <br>чтобы история нашей любви писалась вечно.</p>
+            </div>
+            <div class="xanzada">
+                <hr>
+                <h1>Ханзада</h1>
+                <hr>
+                <img class="galleryImg" src="./images/ulan.JPG" alt="">
+                <p>Я счастлива отдать своё сердце лучшему мужчине в мире.  <br> Хочу всегда быть с тобой, дарить тебе свою любовь, чтобы <br> моя поддержка придавала тебе сил и помогала воплощать мечты.</p>
+            </div>
         </div>
       <h1 class="bellagio">Приглашаем вас в Bellagio Banquet Hall <br>18:00</h1>
     
